Add src index to out field display and update screenshot

--- a/mergecsv.kv
+++ b/mergecsv.kv
@@ -19,7 +19,7 @@
     height: '75dp'
     markup: True
     line_height: 1.5
-    text: '[color=#808080]{}[/color] ->\n    {}'.format(self.src_name, self.name)
+    text: '[color=#808080]{}.{}[/color] ->\n    {}'.format(self.src.in_idx, self.src_name, self.name)
 
 
 <AppRoot>:
